--- a/index.html
+++ b/index.html
@@ -1,31 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Excelguruji - AI Excel Help</title>
-  <link rel="stylesheet" href="style.css"/>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Excelguruji</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>📊 Excelguruji</h1>
-    <p>Upload your Excel screenshot and get instant AI-powered help!</p>
-
-    <form id="uploadForm">
-      <label for="query">Your Question:</label>
-      <textarea id="query" placeholder="Describe your Excel issue here..."></textarea>
-
-      <label for="fileUpload">Upload Screenshot:</label>
-      <input type="file" id="fileUpload" accept="image/*"/>
-
-      <button type="button" onclick="analyze()">Analyze with AI</button>
-    </form>
-
-    <div id="responseBox">
-      <h2>AI Response:</h2>
-      <p id="responseText">Upload a screenshot and ask your question to get help.</p>
-    </div>
+  <div class="header">
+    <img src="images/logo.png" alt="Excelguruji Logo" class="logo">
+    <h1>Excelguruji</h1>
   </div>
+
+  <div class="container">
+    <h2>Upload Screenshot</h2>
+    <input type="file" id="fileInput" accept="image/*">
+    <button id="analyzeBtn">Analyze with Excelguruji</button>
+
+    <h2>Guruji's Response:</h2>
+    <div id="response">Upload a screenshot and click the button to get help.</div>
+  </div>
+
   <script src="script.js"></script>
 </body>
 </html>
