--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="header">
-    <img src="images/logo.png" alt="Excelguruji Logo" class="logo">
+    <img src="logo.png" alt="Excelguruji Logo" class="logo">
     <h1>Excelguruji</h1>
   </div>
 
@@ -23,4 +23,5 @@
 
   <script src="script.js"></script>
 </body>
+
 </html>
